do not quote in NodeProcess + add test